[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://menu_bg.png" type="Texture" id=2]

[node name="menu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Mouse" ]

[node name="v_box_container" type="VBoxContainer" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 432.0
margin_right = -512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Mouse" ]

[node name="start_game" type="Button" parent="v_box_container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 278.0
margin_right = 80.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start game"
flat = false

[node name="quit_game" type="Button" parent="v_box_container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 302.0
margin_right = 80.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false

[node name="texture_rect" type="TextureRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Mouse", "Rect" ]

[node name="http_request" type="HTTPRequest" parent="."]

use_threads = false
body_size_limit = -1
max_redirects = 8

[connection signal="pressed" from="v_box_container/start_game" to="." method="_on_start_game_pressed"]

[connection signal="pressed" from="v_box_container/quit_game" to="." method="_on_quit_game_pressed"]

[connection signal="request_completed" from="http_request" to="." method="_on_http_request_request_completed"]


